# Balatro-sfml

./: .gitignore  CMakeLists.txt
assets/data/: jokers.json  ranks.json
src/: main.cpp
src/Game/Core/: BasicStateMachine.hpp  Deck.hpp  Game.cpp  Game.hpp  GameContext.hpp  HoverTooltipController.hpp  InputRouter.hpp  RenderPipeline.cpp  RenderPipeline.hpp  SceneCoordinator.cpp  SceneCoordinator.hpp  StateMachine.hpp
src/Game/Data/: CRTParams.hpp  JokerData.hpp
src/Game/Effects/: EffectContext.hpp  IEffect.hpp  JokerEffects.hpp
src/Game/Objects/: Card.hpp  CardArea.cpp  CardArea.hpp  CardModel.hpp  CardView.hpp
src/Game/States/: IGameState.hpp  RunState.cpp  RunState.hpp  ShopState.cpp  ShopState.hpp  StateDefinitions.hpp
src/Game/Systems/: CardSnapshot.hpp  CardSnapshotUtils.hpp  GameDatabase.cpp  GameDatabase.hpp  HandEvaluator.cpp  HandEvaluator.hpp  JokerEffectFactory.cpp  JokerEffectFactory.hpp  ResourceManager.cpp  ResourceManager.hpp  RunFlow.cpp  RunFlow.hpp  ScoringManager.cpp  ScoringManager.hpp  ShopFlow.cpp  ShopFlow.hpp  ShopRestock.cpp  ShopRestock.hpp  StartupPolicy.cpp  StartupPolicy.hpp
src/Game/UI/: FloatingText.hpp  Tooltip.cpp  Tooltip.hpp  UIManager.cpp  UIManager.hpp
